优化dino推理速度与精准度，